# ai-photo-editor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  vcpkg.json
models/: README.txt
src/: adjustments.cpp  adjustments.h  ai_processor.cpp  ai_processor.h  app.cpp  app.h  crop_tool.cpp  crop_tool.h  image.cpp  image.h  main.cpp  ui_panels.cpp  ui_panels.h  viewport.cpp  viewport.h
